# intrinsic-superclasses

./: .gitignore  README.md  intrinsic-superclasses.cabal
example/: Example.hs
src/Quasi/: Instances.hs
src/Quasi/Instances/: Internal.hs
