cabal-version: 2.4
name:                intrinsic-superclasses
version:             0.1.0.0
synopsis:           A quasiquoter implementation of the Intrinsic Superclasses Proposal
description:
  A template haskell implementation of the
  <https://ghc.haskell.org/trac/ghc/wiki/IntrinsicSuperclasses Intrinsic Superclasses Proposal>,
  which allows defining all superclass methods at the "root"
  of the class heirarchy in one declaration, rather than
  an instance declaration per class
homepage:            https://github.com/daig/intrinsic-superclasses#readme
license:             MIT
license-file:        LICENSE
author:              Dai
maintainer:          daig@sodality.cc
copyright:           Sodality
category:            Language
build-type:          Simple
extra-source-files:  README.md

common x
  ghc-options:         -Wall
  default-language:    Haskell2010
  default-extensions: ScopedTypeVariables, TupleSections, FlexibleInstances,FlexibleContexts, GADTs, LambdaCase, ViewPatterns
  
library
  import: x
  hs-source-dirs:      src
  exposed-modules:     Quasi.Instances, Quasi.Instances.Internal
  build-depends:       base >= 4.7 && < 5
                      ,template-haskell
                      ,haskell-src-meta ^>= 0.8.0.5
                      ,containers
                      ,mtl

library example
  import: x
  hs-source-dirs:      example
  exposed-modules:     Example
  build-depends:       base >= 4.7 && < 5
                      ,intrinsic-superclasses

source-repository head
  type:     git
  location: https://github.com/exordium/intrinsic-superclasses
